...
            android:background="#888"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_home_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/image_home_v1_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_home_v1"
...
