...
                app:layout_constraintStart_toStartOf="@id/text_item_home_v1_seeall"
                app:layout_constraintEnd_toEndOf="@id/text_item_home_v1_seeall"
                android:background="#8000"/>

            <androidx.recyclerview.widget.RecyclerView
                android:background="@color/iwbn_primary_color"
                android:id="@+id/recycler_item_home_v1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_item_home_v1_divider_seeall"
                app:layout_constraintBottom_toBottomOf="parent"
...
