...
            app:layout_constraintTop_toBottomOf="@id/text_item_book_writer_summary"
            android:text="Followers :"
            android:textStyle="bold"
            android:textColor="@color/iwbn_primary_color"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/text_item_book_writer_fav_count"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/text_item_book_writer_follow"
            app:layout_constraintBottom_toBottomOf="@id/text_item_book_writer_follow"
            app:layout_constraintStart_toEndOf="@id/text_item_book_writer_follow"
            android:layout_marginStart="8dp"
...
