...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000"
                android:alpha="0.2"/>

            <ImageView
                android:id="@+id/image_book_writen_detail_bookmark"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@{viewModel.isFollowing ? @drawable/bookmarked_icon : @drawable/bookmark_icon}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
